# pkg/api/types.gen.go
@@ -3,6 +3,14 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.0.0 DO NOT EDIT.
 package api
 
+// AddLensBody defines model for AddLensBody.
+type AddLensBody struct {
+	Description *string   `json:"description,omitempty"`
+	Owner       *string   `json:"owner,omitempty"`
+	Spec        *string   `json:"spec,omitempty"`
+	Tags        *[]string `json:"tags,omitempty"`
+}
+
 // Lens defines model for Lens.
 type Lens struct {
 	Description *string   `json:"description,omitempty"`
@@ -27,6 +35,12 @@ type Workload struct {
 	Id           *string `json:"id,omitempty"`
 	Name         *string `json:"name,omitempty"`
 }
+
+// AddLensRequest defines model for AddLensRequest.
+type AddLensRequest = AddLensBody
+
+// AddLensJSONRequestBody defines body for AddLens for application/json ContentType.
+type AddLensJSONRequestBody = AddLensBody
 
 // AddWorkloadJSONRequestBody defines body for AddWorkload for application/json ContentType.
 type AddWorkloadJSONRequestBody = Workload
